testsuite/tests/typecheck/should_fail/tcfail168.stderr
tcfail168.hs:7:11: error: [GHC-83865]
    • Couldn't match expected type: IO a0
                  with actual type: Char -> IO ()
    • Probable cause: ‘putChar’ is applied to too few arguments
      In the expression: putChar
      In the expression:
        do putChar
           putChar 'a'
           putChar 'a'
           putChar 'a'
           ....
      In an equation for ‘foo’:
          foo
            = do putChar
                 putChar 'a'
                 putChar 'a'
                 ....

